--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_foreground"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RetrofitMVP">
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <activity android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
