--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:name=".di.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_foreground"
-        android:label="@string/app_name"
+        android:label="${add}"
         android:roundIcon="@mipmap/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
